--- a/html/gallery.html
+++ b/html/gallery.html
@@ -99,19 +99,19 @@ http://www.templatemo.com/tm-509-hydro
                 <div class="col-md-12 col-sm-12" style="margin-bottom: 40px;">
                     <div class="about-info">
                         <div class="section-title" style="text-align: center;">
-                            <h2>Gallery</h2>
+                            <h2>Inspection</h2>
                             <span class="line-bar">...</span>
                         </div>
                         <div class="row " style="gap:20px;">
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="../images/banner_img.jpg" class="image-popup">
-                                        <img src="../images/banner_img.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/banglorGenerator.jpg" class="image-popup">
+                                        <img src="/gallery/banglorGenerator.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
-                                            <h3>Upper Piluwa</h3>
-                                            <small>1st Progress </small>
+                                            <h3>Turbine Inspection</h3>
+                                            <small>Gallery</small>
                                         </div>
                                     </a>
                                 </div>
@@ -119,12 +119,12 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="../images/banner_img.jpg" class="image-popup">
-                                        <img src="../images/banner_img.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/turbineInspection.jpg" class="image-popup">
+                                        <img src="/gallery/turbineInspection.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
-                                            <h3>Upper Piluwa</h3>
-                                            <small>1st Progress </small>
+                                            <h3>Turbine Inspection</h3>
+                                            <small>Gallery</small>
                                         </div>
                                     </a>
                                 </div>
@@ -132,12 +132,36 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="../images/banner_img.jpg" class="image-popup">
-                                        <img src="../images/banner_img.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/turbineInspection1.jpg" class="image-popup">
+                                        <img src="/gallery/turbineInspection1.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
-                                            <h3>Upper Piluwa</h3>
-                                            <small>1st Progress </small>
+                                            <h3>Turbine Inspection</h3>
+                                            <small>Gallery</small>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12" style="margin-bottom: 40px;">
+                    <div class="about-info">
+                        <div class="section-title" style="text-align: center;">
+                            <h2>Power House</h2>
+                            <span class="line-bar">...</span>
+                        </div>
+                        <div class="row " style="gap:20px;">
+                            <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
+                                <!-- WORK THUMB -->
+                                <div class="work-thumb">
+                                    <a href="/gallery/powerhouse.jpg" class="image-popup">
+                                        <img src="/gallery/powerhouse.jpg" class="img-responsive" alt="Work">
+
+                                        <div class="work-info">
+                                            <h3>Power House</h3>
+                                            <small>Gallery</small>
                                         </div>
                                     </a>
                                 </div>
@@ -145,12 +169,12 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="../images/banner_img.jpg" class="image-popup">
-                                        <img src="../images/banner_img.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/powerhouse1.jpg" class="image-popup">
+                                        <img src="/gallery/powerhouse1.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
-                                            <h3>Upper Piluwa</h3>
-                                            <small>1st Progress </small>
+                                            <h3>Power House</h3>
+                                            <small>Gallery</small>
                                         </div>
                                     </a>
                                 </div>
@@ -158,12 +182,35 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="../images/banner_img.jpg" class="image-popup">
-                                        <img src="../images/banner_img.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/powerhouse2.jpg" class="image-popup">
+                                        <img src="/gallery/powerhouse2.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
-                                            <h3>Upper Piluwa</h3>
-                                            <small>1st Progress </small>
+                                            <h3>Power House</h3>
+                                            <small>Gallery</small>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12" style="margin-bottom: 40px;">
+                    <div class="about-info">
+                        <div class="section-title" style="text-align: center;">
+                            <h2>Pipeline Alignment</h2>
+                            <span class="line-bar">...</span>
+                        </div>
+                        <div class="row " style="gap:20px;">
+                            <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
+                                <!-- WORK THUMB -->
+                                <div class="work-thumb">
+                                    <a href="/gallery/pipelineApartment.jpg" class="image-popup">
+                                        <img src="/gallery/pipelineApartment.jpg" class="img-responsive" alt="Work">
+
+                                        <div class="work-info">
+                                            <h3>Pipeline Alignment</h3>
+                                            <small>Gallery</small>
                                         </div>
                                     </a>
                                 </div>
@@ -171,12 +218,12 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="../images/banner_img.jpg" class="image-popup">
-                                        <img src="../images/banner_img.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/pipeline.1jpg.jpg" class="image-popup">
+                                        <img src="/gallery/pipeline.1jpg.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
-                                            <h3>Upper Piluwa</h3>
-                                            <small>1st Progress </small>
+                                            <h3>Pipeline Alignment</h3>
+                                            <small>Gallery</small>
                                         </div>
                                     </a>
                                 </div>
@@ -184,12 +231,12 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="../images/banner_img.jpg" class="image-popup">
-                                        <img src="../images/banner_img.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/pipeline.jpg" class="image-popup">
+                                        <img src="/gallery/pipeline.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
-                                            <h3>Upper Piluwa</h3>
-                                            <small>1st Progress </small>
+                                            <h3>Pipeline Alignment</h3>
+                                            <small>Gallery</small>
                                         </div>
                                     </a>
                                 </div>
@@ -197,12 +244,48 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="../images/banner_img.jpg" class="image-popup">
-                                        <img src="../images/banner_img.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/pipeline2.jpg" class="image-popup">
+                                        <img src="/gallery/pipeline2.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
-                                            <h3>Upper Piluwa</h3>
-                                            <small>1st Progress </small>
+                                            <h3>Pipeline Alignment</h3>
+                                            <small>Gallery</small>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12" style="margin-bottom: 40px;">
+                    <div class="about-info">
+                        <div class="section-title" style="text-align: center;">
+                            <h2>Head Works</h2>
+                            <span class="line-bar">...</span>
+                        </div>
+                        <div class="row " style="gap:20px;">
+                            <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
+                                <!-- WORK THUMB -->
+                                <div class="work-thumb">
+                                    <a href="/gallery/headwork.jpg" class="image-popup">
+                                        <img src="/gallery/headwork.jpg" class="img-responsive" alt="Work">
+
+                                        <div class="work-info">
+                                            <h3>Head Work</h3>
+                                            <small>Gallery</small>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
+                                <!-- WORK THUMB -->
+                                <div class="work-thumb">
+                                    <a href="/gallery/headwork1.jpg" class="image-popup">
+                                        <img src="/gallery/headwork1.jpg" class="img-responsive" alt="Work">
+
+                                        <div class="work-info">
+                                            <h3>Head Work</h3>
+                                            <small>Gallery</small>
                                         </div>
                                     </a>
                                 </div>
