--- a/html/about.html
+++ b/html/about.html
@@ -287,8 +287,8 @@ http://www.templatemo.com/tm-509-hydro
                     </div>
                 </div>
 
-                <div class="row" style="display:flex ; justify-content: space-between;">
-                    <div class="col-md-4 col-sm-12">
+                <div class="row">
+                    <div class=" col-md-4 col-12">
                         <!-- WORK THUMB -->
                         <div class="work-thumb">
                             <a href="../images/laxmi.png" class="image-popup">
@@ -303,7 +303,7 @@ http://www.templatemo.com/tm-509-hydro
                         <h4 style="color:#02adef">Laxmi Bank Pvt Ltd</h4>
                     </div>
 
-                    <div class="col-md-4 col-sm-12">
+                    <div class="col-md-4 co-12">
                         <!-- WORK THUMB -->
                         <div class="work-thumb">
                             <a href="../images/himalayanBank.jpg" class="image-popup">
