--- a/html/gallery.html
+++ b/html/gallery.html
@@ -156,8 +156,8 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="/gallery/powerhouse.jpg" class="image-popup">
-                                        <img src="/gallery/powerhouse.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/power house.jpg" class="image-popup">
+                                        <img src="/gallery/power house.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
                                             <h3>Power House</h3>
@@ -184,6 +184,19 @@ http://www.templatemo.com/tm-509-hydro
                                 <div class="work-thumb">
                                     <a href="/gallery/powerhouse2.jpg" class="image-popup">
                                         <img src="/gallery/powerhouse2.jpg" class="img-responsive" alt="Work">
+
+                                        <div class="work-info">
+                                            <h3>Power House</h3>
+                                            <small>Gallery</small>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
+                                <!-- WORK THUMB -->
+                                <div class="work-thumb">
+                                    <a href="/gallery/power house2.jpg" class="image-popup">
+                                        <img src="/gallery/power house2.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
                                             <h3>Power House</h3>
@@ -228,6 +241,7 @@ http://www.templatemo.com/tm-509-hydro
                                     </a>
                                 </div>
                             </div>
+
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
@@ -244,8 +258,8 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="/gallery/pipeline2.jpg" class="image-popup">
-                                        <img src="/gallery/pipeline2.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/headwork1.jpg" class="image-popup">
+                                        <img src="/gallery/headwork1.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
                                             <h3>Pipeline Alignment</h3>
@@ -254,6 +268,7 @@ http://www.templatemo.com/tm-509-hydro
                                     </a>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -264,6 +279,19 @@ http://www.templatemo.com/tm-509-hydro
                             <span class="line-bar">...</span>
                         </div>
                         <div class="row " style="gap:20px;">
+                            <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
+                                <!-- WORK THUMB -->
+                                <div class="work-thumb">
+                                    <a href="/gallery/head work2.jpg" class="image-popup">
+                                        <img src="/gallery/head work2.jpg" class="img-responsive" alt="Work">
+
+                                        <div class="work-info">
+                                            <h3>Head Work</h3>
+                                            <small>Gallery</small>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
@@ -280,8 +308,21 @@ http://www.templatemo.com/tm-509-hydro
                             <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
                                 <!-- WORK THUMB -->
                                 <div class="work-thumb">
-                                    <a href="/gallery/headwork1.jpg" class="image-popup">
-                                        <img src="/gallery/headwork1.jpg" class="img-responsive" alt="Work">
+                                    <a href="/gallery/head work1.jpg" class="image-popup">
+                                        <img src="/gallery/head work1.jpg" class="img-responsive" alt="Work">
+
+                                        <div class="work-info">
+                                            <h3>Head Work</h3>
+                                            <small>Gallery</small>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-6" style="margin-top: 30px;">
+                                <!-- WORK THUMB -->
+                                <div class="work-thumb">
+                                    <a href="/gallery/head work.jpg" class="image-popup">
+                                        <img src="/gallery/head work.jpg" class="img-responsive" alt="Work">
 
                                         <div class="work-info">
                                             <h3>Head Work</h3>
