--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-3 col-sm-6">
                          <!-- WORK THUMB -->
                          <div class="work-thumb">
-                              <a href="images/banner_img.jpg" class="image-popup">
-                                   <img src="images/banner_img.jpg" class="img-responsive" alt="Work">
+                              <a href="gallery/banglorGenerator.jpg" class="image-popup">
+                                   <img src="gallery/banglorGenerator.jpg" class="img-responsive" alt="Work">
 
                                    <div class="work-info">
-                                        <h3>Upper Piluwa</h3>
-                                        <small>1st Progress </small>
+                                        <h3>Banglore Trip</h3>
+                                        <small>Upper Piluwa Hydro</small>
                                    </div>
                               </a>
                          </div>
@@ -165,12 +165,12 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-3 col-sm-6">
                          <!-- WORK THUMB -->
                          <div class="work-thumb">
-                              <a href="images/banner_img.jpg" class="image-popup">
-                                   <img src="images/banner_img.jpg" class="img-responsive" alt="Work">
+                              <a href="images/head work13.jpg" class="image-popup">
+                                   <img src="images/head work13.jpg" class="img-responsive" alt="Work">
 
                                    <div class="work-info">
-                                        <h3>Upper Piluwa</h3>
-                                        <small>2nd Progress </small>
+                                        <h3>Head Work</h3>
+                                        <small>Upper Piluwa Hydro </small>
                                    </div>
                               </a>
                          </div>
@@ -179,12 +179,12 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-3 col-sm-6">
                          <!-- WORK THUMB -->
                          <div class="work-thumb">
-                              <a href="images/banner_img.jpg" class="image-popup">
-                                   <img src="images/banner_img.jpg" class="img-responsive" alt="Work">
+                              <a href="gallery/pipeline2.jpg" class="image-popup">
+                                   <img src="gallery/pipeline2.jpg" class="img-responsive" alt="Work">
 
                                    <div class="work-info">
-                                        <h3>Upper Piluwa</h3>
-                                        <small>3rd Progress </small>
+                                        <h3>PipeLine</h3>
+                                        <small>Upper Piluwa Hydro</small>
                                    </div>
                               </a>
                          </div>
@@ -193,12 +193,12 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-3 col-sm-6">
                          <!-- WORK THUMB -->
                          <div class="work-thumb">
-                              <a href="images/banner_img.jpg" class="image-popup">
-                                   <img src="images/banner_img.jpg" class="img-responsive" alt="Work">
+                              <a href="gallery/power house.jpg" class="image-popup">
+                                   <img src="gallery/power house.jpg" class="img-responsive" alt="Work">
 
                                    <div class="work-info">
-                                        <h3>Upper Piluwa</h3>
-                                        <small>4th Progress </small>
+                                        <h3>Power House</h3>
+                                        <small>Upper Piluwa Hydro </small>
                                    </div>
                               </a>
                          </div>
